--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^3.0.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^0.2.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
@@ -11,8 +23,7 @@
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.6.3",
-    "web-vitals": "^0.2.2"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
